--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>ALAB DOM Manipulation</title>
     <meta charset="UTF-8" />
-    <script src="./style.css"></script>
+    <link rel="stylesheet" href="./style.css">
+    <script defer src="./script.js"></script>
   </head>
 
   <body>
@@ -11,7 +12,5 @@
       <nav id="top-menu"></nav>
     </header>
     <main></main>
-
-    <script src="./script.js"></script>
   </body>
 </html>
